# ros2-mobile-manipulator-sorting

./: README.md
manbot/: base.SLDPRT  elbow.SLDPRT  gripper-2.SLDPRT  gripper.SLDPRT  left end.SLDPRT  right end.SLDPRT  robot.SLDASM  shoulder.SLDPRT  wheel_1.SLDPRT
ros2_ws/src/: readme.md
ros2_ws/src/custom_teleop/: package.xml  setup.py
ros2_ws/src/custom_teleop/custom_teleop/: teleop_arm_node.py
ros2_ws/src/object_spawner/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/object_spawner/config/: robot_controllers.yaml
ros2_ws/src/object_spawner/launch/: robot.launch.py
ros2_ws/src/object_spawner/meshes/: ball.STL  base_link.STL  elbow.STL  left_gripper.STL  ramp.STL  right_gripper.STL  shoulder.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL  wheel_4.STL
ros2_ws/src/object_spawner/urdf/: cube.urdf  ramp_concrete.urdf  ramp_polished.urdf  ramp_rubber.urdf  robot.urdf  sphere.urdf
ros2_ws/src/object_spawner/worlds/: empty_world.sdf
