<?xml version="1.0"?>
<package format="3">
  <name>object_spawner</name>
  <version>0.0.1</version>
  <description>Custom Gazebo models and robot setup</description>
  <maintainer email="adithyapothula123@gmail.com">adithya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
